--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="javascripts/project.js"></script>
+<script type="text/javascript" src="/javascripts/project.js"></script>
 <h1>Listing projects</h1>
 
 <table>
