--- a/app/views/home/_home.html.erb
+++ b/app/views/home/_home.html.erb
@@ -6,11 +6,11 @@
 				<li id="li2">Perfis</li>
 			</ul>
 		</div>
-		<div id="pedidos_nav" class="text-content">
+		<div id="projects_nav" class="text-content">
 			<ul>
-				<li id="di1">Pedido</li>
-				<li id="di2">Minuta</li>
-				<li id="di3">Teste</li>
+				<li id="di1">Projects</li>
+				<li id="di2">Releases</li>
+				<li id="di3">Teams</li>
 			</ul>
 		</div>
 		<div id="cadastros_nav" class="text-content">
@@ -44,8 +44,8 @@ var viewport = new Ext.Viewport({
 				title:'Controle de usu&aacute;rios',
 				border:false,iconCls:'nav'
 			},{
-				contentEl:'pedidos_nav',
-				title:'Pedido',border:false,iconCls:'settings'
+				contentEl:'projects_nav',
+				title:'Project',border:false,iconCls:'settings'
 			},{
 				contentEl:'cadastros_nav',
 				title:'Cadastros',border:false,iconCls:'settings'
@@ -60,37 +60,25 @@ var viewport = new Ext.Viewport({
 });
 Ext.get('di1').on('click', function(e){
 	var tabs = viewport.getComponent("centro");
-	var destroyed = tabs.getComponent("pedidos");
+	var destroyed = tabs.getComponent("projects");
 	if(destroyed == undefined) {
-		console.log(destroyed);
 		var panel = new Ext.Panel({
-			id:'pedidos',
-			title:'Pedidos',
-			//autoShow:true,
-			closable:true,
+			id:'projects', title:'Projects', closable:true,
 			listeners: {
 				activate: function(tab){
 					tab.getUpdater().refresh();
         		}
         	},
 			autoLoad:{
-				scripts: true,
-				url:'/pedidos'//,disableCaching:false
+				scripts: true,url:'/projects'
 			}
 		});
 		tabs.add(panel).show();
 	} else {
-		console.log(destroyed);
 		destroyed.getUpdater().refresh();
 	}
-	//tabs.remove(panel);
 	tabs.add(panel).show();
-	//panel.setTitle("Pedidos");
-	//panel.doLayout(true);
-	//tabs.getActiveTab().doLayout(true);
-	//panel.setHeight(600);
+
 });
-
-
 </script>
 
